HMAN-851 Bean validation test updates. Add isAPanelFlag to functional test data.